# bedrock-invocation-analytics

./: .gitignore  LICENSE  README.md  README_CN.md  cf-deploy-template.yaml  config.example.yaml  deploy.sh  pyproject.toml  start-webui.sh
deploy/: app.py  hub_stack.py  spoke_stack.py  stack.py
deploy/lambda/: aggregate_stats.py  compute_cost.py  parse_log.py  process_log.py  sync_pricing.py
docs/: README_CN.md  bedrock-invocation-log-format.md
lambda/: etl.py
scripts/: seed_pricing.py
webui/: app.py  dashboard.py  data.py  fetch_pricing.py  index.py  main.py  pricing.json  pricing.py  pyproject.toml
