[project]
name = "bedrock-invocation-analytics"
version = "3.1.3"
description = "Bedrock invocation logging analytics - monitor token usage, costs and performance"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
    "nicegui",
    "boto3",
    "pyyaml>=6.0.3",
]
